Update 3-2. 프로그래밍 전용 리포트 개발(총 정리).md

--- a/ABAP 심화/3-2. 프로그래밍 전용 리포트 개발(총 정리).md
+++ b/ABAP 심화/3-2. 프로그래밍 전용 리포트 개발(총 정리).md
@@ -1504,7 +1504,7 @@ DATA: <ref_var> TYPE REF TO <class_name>.
 - `CL_GUI_CUSTOM_CONTAINER` : Screen의 Area와 연결되는 컨테이너
 - `CL_GUI_ALV_GRID` : Container 안에서 데이터를 표시하는 ALV Grid 객체
 ```abap
-*************** TOP ****************
+*************** TOP ****************                   " REPORT ZPROGB03_0028.
 DATA: go_cont TYPE REF TO CL_GUI_CUSTOM_CONTAINER,     " Container 참조변수 생성 (아직 객체 생성되기 전)
       go_alv TYPE REF TO CL_GUI_ALV_GRID.              " ALV 참조변수 생성 (아직 객체 생성되기 전)
 ```
@@ -1528,6 +1528,8 @@ ENDIF.
 - `container_name` → Screen의 Area와 연결
 - `i_parent` → ALV ↔ Container 연결
 ```abap
+REPORT ZPROGB03_0028.
+
 *************** PBO ****************
 MODULE init_alv OUTPUT.
   " 1. SCREEN에 Custom Area 추가
@@ -1587,6 +1589,8 @@ ENDFORM.
 - `->FREE()` : 객체가 사용하는 GUI 컨트롤 자원 해제
 - `FREE ref` : 참조 변수만 해제(값 INITIAL로 초기화)
 ```abap
+REPORT ZPROGB03_0028.
+
 *************** PAI ****************
 MODULE exit INPUT.
   CASE OK_CODE.
@@ -1633,6 +1637,8 @@ CALL METHOD <alv_ref>->set_table_for_first_display
 - `SET_TABLE_FOR_FIRST_DISPLAY` : 내부 테이블 데이터를 ALV Grid에 최초로 표시하는 메서드
 - SET_TABLE* 하고 f4 누르면 자동완성
 ```abap
+REPORT ZPROGB03_0028.
+
 *************** PBO ****************
 " 4. ALV Grid 안에 Data Display
 CALL METHOD go_alv->set_table_for_first_display
@@ -1658,41 +1664,19 @@ CALL METHOD go_alv->set_table_for_first_display
 
 **5) ALV 데이터 갱신**
 - `REFRESH_TABLE_DISPLAY`
-- 이미 생성된 ALV Grid가 있을 때 사용
-- ALV를 다시 만들지 않고 데이터만 화면에 반영
-- 보통 PBO에서 호출
+- 이미 생성된 ALV Grid가 있을 때 ALV를 다시 만들지 않고 데이터만 화면에 반영
 ```abap
-CALL METHOD <alv_ref>->refresh_table_display
-  EXPORTING
-    is_stable = <ls_stable>.
-```
-- `LVC_S_STBL` 은 ALV 새로고침 시 스크롤·선택 위치가 초기화되지 않도록 화면을 고정하는 옵션
-```abap
-DATA ls_stable TYPE lvc_s_stbl.
-
-ls_stable-row = 'X'. " 행 위치 유지
-ls_stable-col = 'X'. " 열 위치 유지
-```
-- `REFRESH_TABLE_DISPLAY` : 내부 테이블 변경 내용을 ALV Grid에 다시 표시(갱신)하는 메서드
-```abap
-*************** TOP ****************
-DATA gs_stable TYPE LVC_S_STBL.
+REPORT ZPROGB03_0028.
 
 *************** PBO ****************
-IF go_cont IS INITIAL.
-    " 생략
+IF go_cont IS INITIAL. " 최초 1번만 실행
+   " ALV 생성 로직
 ELSE.
-  gs_stable-row = 'X'.
-  gs_stable-col = 'X'.
-
-  CALL METHOD go_alv->refresh_table_display
-    EXPORTING
-      is_stable      = gs_stable
-      i_soft_refresh = ''  " X : 정렬, 필터, 그외 기능들 유지
-      " _ : 전체 리프레쉬 (기본)
-    EXCEPTIONS
-      finished       = 1
-      OTHERS         = 2.
+   " 최초에 1번 생성된 후, 두번째부터는 ELSE구문을 실행한다
+   CALL METHOD go_alv->refresh_table_display
+     EXCEPTIONS
+       finished       = 1
+       others         = 2.
 ENDIF.
 ```
 </br>
@@ -1798,6 +1782,8 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_outtab  = <itab>.
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 *************** TOP ****************
 DATA: gs_variant TYPE disvariant,
       gv_save    TYPE c LENGTH 1.
@@ -1831,6 +1817,8 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_outtab  = <itab>.
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 *************** TOP ****************
 DATA gv_variant TYPE disvariant.
 PARAMETERS pa_lv TYPE disvariant-variant.
@@ -1855,6 +1843,8 @@ CALL METHOD go_alv_grid->set_table_for_first_display
 
 **1) `TOP` 모듈 수정**
 ```abap
+REPORT ZPROGB03_0029.
+
 DATA: gs_variant TYPE disvariant.
 
 INITIALIZATION.
@@ -1869,6 +1859,8 @@ INITIALIZATION.
 
 **2) `PBO` 의 `init_alv` 모듈 수정**
 ```abap
+REPORT ZPROGB03_0029.
+
 " 4. ALV Grid 안에 Data display
     CALL METHOD go_alv->set_table_for_first_display
       EXPORTING
@@ -2408,29 +2400,46 @@ ENDIF.
 
 ### 1) ALV 데이터 갱신
 - 이미 생성된 ALV Grid가 있을 때 ALV를 다시 생성하지 않고 데이터만 화면에 반영
-- `LVC_S_STBL` : ALV 새로고침 시 화면 위치 고정용 구조
-- `row = 'X'` → 행(스크롤) 위치 유지
-- `col = 'X'` → 열(커서) 위치 유지
+- `REFRESH_TABLE_DISPLAY` → ALV Grid 데이터를 다시 그리되 스크롤·선택 상태를 유지한 채 화면만 갱신하는 메서드
+- 보통 PBO에서 호출
+```abap
+CALL METHOD <alv_ref>->refresh_table_display
+  EXPORTING
+    is_stable = <ls_stable>.
+```
 </br>
 
-- `REFRESH_TABLE_DISPLAY` → ALV Grid 데이터를 다시 그리되 스크롤·선택 상태를 유지한 채 화면만 갱신하는 메서드
+- `LVC_S_STBL` 은 ALV 새로고침 시 스크롤·선택 위치가 초기화되지 않도록 화면을 고정하는 옵션
+- `row = 'X'` → 행(스크롤) 위치 유지
+- `col = 'X'` → 열(커서) 위치 유지
+```abap
+DATA ls_stable TYPE lvc_s_stbl.
+
+ls_stable-row = 'X'. " 행 위치 유지
+ls_stable-col = 'X'. " 열 위치 유지
+```
+</br>
+
 - `i_soft_refresh` = 'X' : 정렬·필터·레이아웃을 유지한 채 데이터만 갱신
 - `i_soft_refresh` = space : ALV를 전체 재계산하여 정렬·필터까지 다시 적용
 ```abap
+REPORT ZPROGB03_0029.
+
 ********* TOP *********
-DATA ls_stable TYPE lvc_s_stbl.    
+DATA gs_stable TYPE LVC_S_STBL.   
 
 ********* PBO *********
-ls_stable-row = 'X'.   " 행(스크롤) 위치 유지
-ls_stable-col = 'X'.   " 열(커서) 위치 유지
+gs_stable-row = 'X'.
+gs_stable-col = 'X'.
 
 CALL METHOD go_alv->refresh_table_display
   EXPORTING
-    is_stable      = ls_stable
-    i_soft_refresh = 'X'   " 정렬·필터·레이아웃 유지
+    is_stable      = gs_stable
+    i_soft_refresh = ''  " X : 정렬, 필터, 그외 기능들 유지
+                         " _ : 전체 리프레쉬 (기본)
   EXCEPTIONS
     finished       = 1
-    others         = 2.
+    OTHERS         = 2.
 ```
 </br>
 </br>
@@ -2461,6 +2470,8 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_outtab        = <itab>.
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 ********* TOP *********
 DATA gs_layout TYPE lvc_s_layo.
 
@@ -2548,6 +2559,8 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_outtab = <itab>.
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 ********* TOP *********
 DATA: BEGIN OF gs_data.
         INCLUDE TYPE sbook.
@@ -2618,6 +2631,8 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_sort   = gt_sort.
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 ********* TOP *********
 DATA: gt_sorter TYPE lvc_t_sort,    " 정렬 기준 테이블
       gs_sorter TYPE lvc_s_sort.    " 정렬 기준 구조
@@ -2682,6 +2697,8 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_filter = gt_filter.
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 ********* TOP *********
 DATA: gt_filter TYPE lvc_t_filt,    " ALV 필터 조건 테이블
       gs_filter TYPE lvc_s_filt.    " ALV 필터 조건 구조
@@ -2776,6 +2793,8 @@ TYPE-POOLS COL.
 - `<intensified>` : 진하게 표시 (1) / 기본 (0)
 - `<inverse>` : 글자색 ↔ 배경색 반전 (1) / 기본 (0)
 ```abap
+REPORT ZPROGB03_0029.
+
 ********* TOP *********
 TYPE-POOLS col.
 
@@ -2871,6 +2890,8 @@ CALL METHOD go_alv_grid->set_table_for_first_display
     it_outtab = <gt_data>.
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 ********* TOP *********
 TYPE-POOLS col.
 
