Update 2-5. 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/2-5. 프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/2-5. 프로그래밍 전용 리포트 개발(12.30).md
@@ -48,6 +48,8 @@ go_alv_grid->set_table_for_first_display(
 ).
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 ********* TOP *********
 DATA gt_uifunc TYPE ui_functions.      " ALV 툴바 제외 기능 목록
 
@@ -179,6 +181,8 @@ CLEAR <gs_fcat>.
 ).
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 ********* TOP *********
 TYPE-POOLS: icon.
 
