--- a/ABAP 심화/3-2. 프로그래밍 전용 리포트 개발(총 정리).md
+++ b/ABAP 심화/3-2. 프로그래밍 전용 리포트 개발(총 정리).md
@@ -3245,6 +3245,8 @@ go_alv_grid->set_table_for_first_display(
 ).
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 ********* TOP *********
 DATA gt_uifunc TYPE ui_functions.      " ALV 툴바 제외 기능 목록
 
@@ -3376,6 +3378,8 @@ CLEAR <gs_fcat>.
 ).
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 ********* TOP *********
 TYPE-POOLS: icon.
 
