Update 2-6. 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/2-6. 프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/2-6. 프로그래밍 전용 리포트 개발(12.31).md
@@ -109,6 +109,8 @@ CALL METHOD <event_object>->set_table_for_first_display
 ```
 - `SENDER` → 이벤트를 발생시킨 객체(오브젝트) 참조
 ```abap
+REPORT ZPROGB03_0029.
+
 *************** C01 ****************
 CLASS lcl_event_handler DEFINITION.
   PUBLIC SECTION.
@@ -177,6 +179,8 @@ CALL METHOD go_alv->set_table_for_first_display
     it_fieldcatalog  = gt_fcat.
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 *************** F01 ****************
 CLEAR gs_fcat.
 gs_fcat-fieldname = 'PHONE'.   " 핫스팟 적용 컬럼
