--- a/ABAP 심화/3-2. 프로그래밍 전용 리포트 개발(총 정리).md
+++ b/ABAP 심화/3-2. 프로그래밍 전용 리포트 개발(총 정리).md
@@ -4027,7 +4027,7 @@ ENDMODULE.
 </br>
 </br>
 
-## <  핵심 개념 >
+## < 핵심 개념 >
 </br>
 
 - **1) ALV Grid 이벤트 처리 정리 (`CLASS-METHODS`)**
@@ -4138,6 +4138,8 @@ CALL METHOD <event_object>->set_table_for_first_display
 ```
 - `SENDER` → 이벤트를 발생시킨 객체(오브젝트) 참조
 ```abap
+REPORT ZPROGB03_0029.
+
 *************** C01 ****************
 CLASS lcl_event_handler DEFINITION.
   PUBLIC SECTION.
@@ -4206,6 +4208,8 @@ CALL METHOD go_alv->set_table_for_first_display
     it_fieldcatalog  = gt_fcat.
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 *************** F01 ****************
 CLEAR gs_fcat.
 gs_fcat-fieldname = 'PHONE'.   " 핫스팟 적용 컬럼
@@ -4357,7 +4361,7 @@ ENDMODULE.
 </br>
 </br>
 
-## <  핵심 개념 >
+## < 핵심 개념 >
 </br>
 
 - **1) ALV Grid 이벤트 처리 정리 (`CLASS-METHODS`)**
