--- a/ABAP 심화/3-2. 프로그래밍 전용 리포트 개발(총 정리).md
+++ b/ABAP 심화/3-2. 프로그래밍 전용 리포트 개발(총 정리).md
@@ -4361,14 +4361,14 @@ ENDMODULE.
 </br>
 </br>
 
-## < 핵심 개념 >
+## <  핵심 개념 >
 </br>
 
-- **1) ALV Grid 이벤트 처리 정리 (`CLASS-METHODS`)**
-- **2) ALV Hotspot 이벤트 처리**
-</br>
+- **1) ALV 표준 툴바 확장 (TOOLBAR 이벤트)**
+- **2) ALV 셀 버튼(Button) 동적 생성 및 클릭 이벤트 처리**
+- **3) ALV USER_COMMAND 실행 전 제어 (before_user_command)**
+- **4) ALV Control 주요 메소드 (get_current_cell, set_user_command, get_selected_rows)**
 
-- **C01(INCLUDE)은 TOP 바로 아래에 두는 게 정석**
 </br>
 </br>
 
@@ -4393,6 +4393,9 @@ ENDMODULE.
 | `5` | 체크박스 버튼 |
 | `6` | 메뉴 엔트리 |
 
+- `e_object` = ALV 툴바 자체를 담고 있는 객체 (여기에 버튼을 추가/삭제함)
+- `e_interactive` = 툴바 이벤트가 사용자 조작으로 발생했는지 알려주는 플래그
+- `e_object->mt_toolbar` = ALV 툴바에 표시될 버튼 목록 테이블
 ```abap
 *************** C01 ****************
 CLASS lcl_event_handler DEFINITION.
@@ -4443,6 +4446,8 @@ CALL METHOD go_alv->set_table_for_first_display
 
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 *************** C01 ****************
 CLASS lcl_event_handler DEFINITION.
   PUBLIC SECTION.
@@ -4555,6 +4560,8 @@ CALL METHOD <ALV_OBJECT>->set_table_for_first_display
   CHANGING it_outtab = gt_data.
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 *************** TOP ****************
 DATA: BEGIN OF gs_data.
         INCLUDE TYPE sbook.
@@ -4660,7 +4667,7 @@ SET HANDLER lcl_event_handler=>on_before_user_command FOR go_alv.
 
 </br>
 
-## < ALV Control 주요 메소드 및 추가적인 이벤트 정리 >
+## < ALV Control 주요 메소드 >
 </br>
 
 - 메서드 = 객체의 상태를 조회하거나 동작을 수행하는 클래스 내부 함수
@@ -4688,6 +4695,8 @@ CALL METHOD <alv_grid>->get_current_cell
 ```
 - 커스텀 툴바 버튼(`CUSTOM_TB`) 클릭 시 현재 커서가 있는 ALV 셀의 행·컬럼을 조회
 ```abap
+REPORT ZPROGB03_0029.
+
 *************** C01 ****************
 CLASS-METHODS on_user_command
   FOR EVENT user_command OF cl_gui_alv_grid
@@ -4725,6 +4734,8 @@ CALL METHOD <alv_grid>->set_user_command
     i_ucomm = <FUNCTION_CODE>.
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 *************** C01 ****************
 CLASS-METHODS on_before_user_command
   FOR EVENT before_user_command OF cl_gui_alv_grid
@@ -4763,6 +4774,8 @@ CALL METHOD <alv_grid>->get_selected_rows
     et_index_rows = <selected_rows>.
 ```
 ```abap
+REPORT ZPROGB03_0029.
+
 *************** PAI ****************
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
@@ -5259,6 +5272,13 @@ CALL METHOD go_alv_grid->set_table_for_first_display
 </br>
 
 <img width="510" height="353" alt="image" src="https://github.com/user-attachments/assets/8ce97d02-ede4-4a4a-aa23-2f7286e3deb5" />
+
+</br>
+</br>
+
+# 01/05
+</br>
+</br>
 
 </br>
 </br>
