Update 2-8. 프로그래밍 전용 리포트 개발(01.05).md

--- a/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
+++ b/ABAP 심화/2-8. 프로그래밍 전용 리포트 개발(01.05).md
@@ -66,14 +66,16 @@ SELECT *
   WHERE <CONDITION>.
 ```
 ```abap
-*************** TOP ****************
+REPORT zprogb03_0030.
+
+*************** REPORT PROGRAM ****************
 PARAMETERS: pa_car TYPE s_carr_id DEFAULT 'AA'.
 
 DATA: go_docking TYPE REF TO cl_gui_docking_container,
       go_alv TYPE REF TO cl_gui_alv_grid.
 DATA: gt_data TYPE TABLE OF sflight.
 
-*************** E01 ****************
+***********************************************
 AT SELECTION-SCREEN OUTPUT.
   IF go_docking IS INITIAL.
     SELECT * FROM sflight INTO TABLE gt_data
@@ -176,6 +178,8 @@ CREATE OBJECT <ALV_RIGHT>      " 오른쪾
     i_parent = <RIGHT_CONTAINER>.
 ```
 ```abap
+REPORT zprogb03_0030.
+
 *************** TOP ****************
 DATA: go_docking TYPE REF TO cl_gui_docking_container,
       go_splitter TYPE REF TO cl_gui_splitter_container,
