Update 3-1. 프로그래밍 DB 활용 개발(01.06).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.06).md
@@ -234,6 +234,8 @@ SELECT <FIELDS>
   USING CLIENT <CLIENT>.
 ```
 ```abap
+REPORT ZPROGB03_0033.
+
 *************** Open SQL – CLIENT 지정 (구문법) ****************
 SELECT * INTO TABLE gt_scarr
   FROM scarr
@@ -271,6 +273,8 @@ INSERT <DB_TABLE>
   [ACCEPTING DUPLICATE KEYS]. " 내부테이블 여러 건 INSERT
 ```
 ```abap
+REPORT ZPROGB03_0033.
+
 DATA: gt_scustom TYPE TABLE OF ZTSCUSTOM_B03,
       gs_scustom TYPE ZTSCUSTOM_B03.
 * DELETE FROM ZTSCUSTOM_B03. => ACCEPTING DUPLICATE KEYS 안하면 써야함
@@ -318,6 +322,8 @@ UPDATE <DB_TABLE>
   FROM TABLE <ITAB>.          " 내부테이블 기준 여러 건 수정
 ```
 ```abap
+REPORT ZPROGB03_0033.
+
 *************** 단건 UPDATE (Work Area) ****************
 gs_scustom-id = 1.
 gs_scustom-name = 'change name'.
@@ -369,6 +375,8 @@ MODIFY <DB_TABLE>
   FROM TABLE <ITAB>.          " 여러 건 UPSERT 처리
 ```
 ```abap
+REPORT ZPROGB03_0033.
+
 *************** 단건 MODIFY (Work Area) ****************
 gs_scustom-id = 500.
 gs_scustom-form = '변경~~'.
@@ -411,6 +419,8 @@ DELETE <DB_TABLE>
   FROM TABLE <ITAB>.          " 내부테이블의 PK 기준으로 여러 건 삭제
 ```
 ```abap
+REPORT ZPROGB03_0033.
+
 *************** 단건 DELETE (Work Area) ****************
 gs_scustom-id = 1.
 DELETE ZTSCUSTOM_B03 FROM gs_scustom.
