Update 3-1. 프로그래밍 DB 활용 개발(01.07).md

--- a/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
+++ b/ABAP 심화/3-1. 프로그래밍 DB 활용 개발(01.07).md
@@ -2,7 +2,7 @@
 </br>
 
 - **서브스크린 생성시 LAYOUT에 서브스크린 지정 필수**
-- MEMORY ID` 는 PARAMETERS, SELECT-OPTIONS에서만 선언 가능 (DATA는 불가능)**
+- **`MEMORY ID` 는 PARAMETERS, SELECT-OPTIONS에서만 선언 가능 (DATA는 불가능)**
 </br>
 </br>
 
